Unforce overflow and hide scrollbars when possible (#117)

--- a/static/styles/highlight.css
+++ b/static/styles/highlight.css
@@ -24,7 +24,7 @@ pre code {
     background: transparent;
     color: white;
     overflow-y: hidden;
-    overflow-x: scroll;
+    overflow-x: auto;
     padding-right: 40px;
     padding-bottom: 20px;
     position: relative;
